welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:3: error: not found: value Direction
    if ( getDirection() == Direction.EST ){
                           ^DwarfCode:10: error: not found: value Direction
    if ( getDirection() == Direction.OUEST ){
                           ^