welcome.lessons.welcome.summative.Moria.scala.code

  while ( !estFaceMur || estSurBiscuit() ){
    if ( getDirection() == Direction.EST ){
      while ( !estSurBiscuit() ){
        avance();
      }
      prendBiscuit();
    }
    retourne();
    if ( getDirection() == Direction.OUEST ){
      while ( !estSurBiscuit() ){
        avance();
      }
      recule();
      poseBiscuit();
      retourne();
    }
  }
  droite();
  avance();
  gauche();
  avance();
